# wolfHSM

./: .gitignore  CLAUDE.md
.github/workflows/: build-and-test-autosar.yml  build-and-test-wolfssl-lib.yml
benchmark/: Makefile  wh_bench.c
benchmark/bench_modules/: wh_bench_mod_mldsa.c  wh_bench_mod_mlkem.c
benchmark/config/: user_settings.h
docs/draft/: aes-gcm-key-usage-hardening.md
docs/src/: chapter05.md
docs/src-ja/: chapter05.md
examples/demo/client/: wh_demo_client_crypto.c  wh_demo_client_wcbench.c  wh_demo_client_wctest.c
examples/posix/wh_posix_client/: Makefile
examples/posix/wh_posix_server/: Makefile  user_settings.h  wh_posix_server.c
port/autosar/adaptive/: CMakeLists.txt
port/autosar/adaptive/examples/ap_smoke/: CMakeLists.txt
port/autosar/classic/examples/csm_smoke/: test_cancel.c  test_helpers.h
src/: wh_client_crypto.c  wh_client_cryptocb.c  wh_crypto.c  wh_flash_unit.c  wh_message_crypto.c  wh_server.c  wh_server_cert.c  wh_server_crypto.c  wh_server_img_mgr.c  wh_server_keystore.c  wh_server_she.c
test/: Makefile  wh_test_cert.c  wh_test_check_struct_padding.c  wh_test_clientserver.c  wh_test_crypto.c  wh_test_log.c  wh_test_multiclient.c  wh_test_nvm_flash.c  wh_test_posix_threadsafe_stress.c  wh_test_server_img_mgr.c  wh_test_she.c  wh_test_timeout.c
test/config/: user_settings.h
tools/whnvmtool/: Makefile
wolfhsm/: wh_client.h  wh_client_crypto.h  wh_crypto.h  wh_message_crypto.h  wh_server_crypto.h
